--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,19 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	
-	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
+	<canvas id="board" width="600px" height="600px"></canvas>
 </body>
+<script type="module" src="./main.js"></script>
+<style>
+	canvas {
+		display: block;
+		margin: 0 auto;
+		background-color: black;
+	}
+</style>
 </html>
